--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,7 @@
-
+services:
+  - type: web
+    name: exomotive-showroom
+    env: node
+    plan: free
+    buildCommand: npm install
+    startCommand: node app.js
